<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"


    android:orientation="vertical"


    tools:context=".MainActivity">




<TextView android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/TextView"
                                             />

   <TextView
       android:text="@string/mensaje1"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:id="@+id/TextView2" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe lo que quieras?"
        android:id="@+id/texto"

        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton1"
        android:id="@+id/pepito"
        android:textColor="@color/material_blue_grey_800" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton2"
        android:id="@+id/pepito2"
        android:textColor="@color/material_blue_grey_800" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton3"
        android:id="@+id/pepito3"
        android:textColor="@color/material_blue_grey_800" />






</LinearLayout>
